--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "god-first-fashion",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -23,11 +23,11 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
-    "next": "^15.5.9",
+    "next": "^16.0.10",
     "next-sanity": "^12.0.1",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
     "shadcn-ui": "^0.9.5",
