--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && npx next-aeo",
     "start": "next start",
+    "postbuild": "next-sitemap",
     "lint": "next lint"
   },
   "dependencies": {
@@ -13,19 +14,24 @@
     "@coreui/icons-react": "^2.3.0",
     "@coreui/react": "^5.9.2",
     "@hookform/resolvers": "^5.2.2",
+    "@next/third-parties": "^16.1.0",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@sanity/client": "^7.13.2",
     "@sanity/image-url": "^2.0.2",
     "@tanstack/react-query": "^5.90.12",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "airtable": "^0.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
     "next": "^16.0.10",
+    "next-aeo": "^1.0.16",
     "next-sanity": "^12.0.1",
+    "next-seo": "^7.0.1",
     "next-themes": "^0.4.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -40,6 +46,7 @@
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
+    "next-sitemap": "^4.2.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0"
   }
